# agenthub

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/infrastructure-design/: deployment-architecture.md  infrastructure-design.md
aidlc-docs/construction/nfr-design/: logical-components.md  nfr-design-patterns.md
aidlc-docs/inception/application-design/: component-dependency.md  component-methods.md  components.md  enhancement-components.md  enhancement-services.md  enhancement-unit-of-work.md  services.md  unit-of-work.md  (+2 more)
backend/: pyproject.toml
backend/app/: __init__.py  auth.py  config.py  database.py  main.py
backend/app/models/: __init__.py  agent_config.py  install_log.py  mcp_server.py  skill.py  sync_source.py  user.py
backend/app/routes/: admin.py  agents.py  auth_routes.py  mcps.py  search.py  skills.py
backend/app/services/: agent_service.py  git_service.py  import_service.py  mcp_service.py  skill_service.py  user_service.py
cli/: pyproject.toml
cli/skills_registry/: __init__.py  client.py  config.py  main.py
design/: skills-registry-platform-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
shared/: pyproject.toml
shared/skills_registry_shared/: __init__.py
shared/skills_registry_shared/adapters/: __init__.py  base.py  factory.py  kiro.py
shared/skills_registry_shared/parsers/: __init__.py  skill_parser.py
shared/skills_registry_shared/schemas/: __init__.py  agent.py  common.py  mcp.py  skill.py  user.py
(+41 files in other folders)
