[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenthub-cli"
version = "0.1.1"
description = "CLI tool for AgentHub — AI Agent Skills Registry Platform"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.0",
    "agenthub-shared",
]

[project.scripts]
agenthub-cli = "skills_registry.main:app"

[tool.hatch.build.targets.wheel]
packages = ["skills_registry"]
